[gd_scene load_steps=6 format=3 uid="uid://dtj47wchb5fff"]

[ext_resource type="Script" path="res://src/game/board/board.gd" id="1_vmbgd"]
[ext_resource type="PackedScene" uid="uid://bx4v31xb0pou0" path="res://src/game/board/walls/goal.tscn" id="2_ny8y5"]
[ext_resource type="Texture2D" uid="uid://c00mw24u3wkb3" path="res://src/shared/background.png" id="2_yhkg5"]
[ext_resource type="PackedScene" uid="uid://c2427sfa5oa7x" path="res://src/game/board/walls/horizontal_wall.tscn" id="3_j2qem"]
[ext_resource type="PackedScene" uid="uid://c0y1netbdh81q" path="res://src/game/board/divider/segment.tscn" id="4_l7r3q"]

[node name="Board" type="Node2D"]
script = ExtResource("1_vmbgd")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_yhkg5")
centered = false

[node name="Walls" type="Node" parent="."]

[node name="LeftGoal" parent="Walls" instance=ExtResource("2_ny8y5")]
position = Vector2(10, 590)
direction = Vector2(-1, 0)

[node name="RightGoal" parent="Walls" instance=ExtResource("2_ny8y5")]
position = Vector2(1910, 590)
direction = Vector2(1, 0)

[node name="TopWall" parent="Walls" instance=ExtResource("3_j2qem")]
position = Vector2(960, 110)

[node name="BottomWall" parent="Walls" instance=ExtResource("3_j2qem")]
position = Vector2(960, 1070)

[node name="Divider" type="Node2D" parent="."]

[node name="Segment" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 140)

[node name="Segment2" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 200)

[node name="Segment3" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 260)

[node name="Segment4" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 320)

[node name="Segment5" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 380)

[node name="Segment6" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 440)

[node name="Segment7" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 500)

[node name="Segment8" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 560)

[node name="Segment9" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 620)

[node name="Segment10" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 680)

[node name="Segment11" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 740)

[node name="Segment12" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 800)

[node name="Segment13" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 860)

[node name="Segment14" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 920)

[node name="Segment15" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 980)

[node name="Segment16" parent="Divider" instance=ExtResource("4_l7r3q")]
position = Vector2(950, 1040)

[connection signal="goal_scored" from="Walls/LeftGoal" to="." method="_on_goal_scored_on_left"]
[connection signal="goal_scored" from="Walls/RightGoal" to="." method="_on_goal_scored_on_right"]
[connection signal="on_wall_hit" from="Walls/TopWall" to="." method="_on_wall_hit"]
[connection signal="on_wall_hit" from="Walls/BottomWall" to="." method="_on_wall_hit"]
[connection signal="on_segment_hit" from="Divider/Segment" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment2" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment3" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment4" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment5" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment6" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment7" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment8" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment9" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment10" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment11" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment12" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment13" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment14" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment15" to="." method="_on_segment_hit"]
[connection signal="on_segment_hit" from="Divider/Segment16" to="." method="_on_segment_hit"]
